Misspelling word 'vornoi' #70236

Closed
opened 2019-09-25 12:18:32 +02:00 by Hoang Duy Tran · 3 comments
Member

System Information
Operating system: Linux-4.15.0-20-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: Mesa DRI Intel(R) Haswell Mobile Intel Open Source Technology Center 4.5 (Core Profile) Mesa 18.0.5

Blender Version
Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-09-24 17:25, hash: 3142ae19d2
Worked: (optional)

Short description of error
Found this word in the 'blender.pot' while translating UI for Vietnamese:

Screenshot from 2019-09-25 11-15-56.png

Supposed be spelling as 'voronoi'.

This is found in the following source code:

Screenshot from 2019-09-25 11-18-11.png

**System Information** Operating system: Linux-4.15.0-20-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: Mesa DRI Intel(R) Haswell Mobile Intel Open Source Technology Center 4.5 (Core Profile) Mesa 18.0.5 **Blender Version** Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-09-24 17:25, hash: `3142ae19d2` Worked: (optional) **Short description of error** Found this word in the 'blender.pot' while translating UI for Vietnamese: ![Screenshot from 2019-09-25 11-15-56.png](https://archive.blender.org/developer/F7774412/Screenshot_from_2019-09-25_11-15-56.png) Supposed be spelling as 'voronoi'. This is found in the following source code: ![Screenshot from 2019-09-25 11-18-11.png](https://archive.blender.org/developer/F7774413/Screenshot_from_2019-09-25_11-18-11.png)
Author
Member

Added subscriber: @hoanguk

Added subscriber: @hoanguk

This issue was referenced by 9fff5c2965

This issue was referenced by 9fff5c296503ee51e4f5307b5dd146b3fe47846e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Brecht Van Lommel self-assigned this 2019-09-25 12:27:29 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70236
No description provided.