Fix T70236: voronoi misspelling in description